# mozilla-django-oidc-db

./: .bumpversion.cfg  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
docker/: README.md
docker/import/: test-realm.json
docs/: architecture.rst  conf.py  customizing.rst  developers.rst  index.rst  quickstart.rst  reference.rst  setup_configuration.rst
docs/_ext/model_field/: __init__.py  directives.py  roles.py  utils.py
mozilla_django_oidc_db/: admin.py  apps.py  backends.py  checks.py  compat.py  config.py  constants.py  exceptions.py  fields.py  forms.py  jwt.py  middleware.py  mixins.py  models.py  plugins.py  registry.py  schemas.py  settings.py  setup_config.py  signals.py  typing.py  utils.py  views.py
mozilla_django_oidc_db/locale/nl/LC_MESSAGES/: django.po
mozilla_django_oidc_db/migrations/: 0001_initial.py  0001_initial_to_v015.py  0001_initial_to_v023.py  0002_migrate_to_claim_field.py  0002_openidconnectconfig_oidc_op_discovery_endpoint.py  0003_auto_20210719_0803.py  0003_openidconnectconfig_oidc_keycloak_idp_hint_and_more.py  0004_auto_20210812_0914.py  0004_auto_20210812_1044.py  0004_remove_openidconnectconfig_oidc_exempt_urls.py  0005_alter_openidconnectconfig_claim_mapping.py  0005_openidconnectconfig_sync_groups_glob_pattern.py  0006_oidcprovider_oidcclient.py  0006_oidcproviderconfig_oidcconfig.py  0006_openidconnectconfig_unique_id_claim.py  0007_auto_20220307_1128.py  0007_auto_20220411_1011.py  0007_migrate_oidc_data.py  0008_auto_20220411_1015.py  0008_auto_20220422_0849.py  0008_delete_openidconnectconfig.py  0009_openidconnectconfig_default_groups.py  0009_openidconnectconfig_legacy.py  0010_openidconnectconfig_userinfo_claims_source.py  0011_alter_openidconnectconfig_userinfo_claims_source.py  0012_alter_openidconnectconfig_sync_groups.py  0012_openidconnectconfig_group_mapping.py  0012_openidconnectconfig_superuser_group_names.py  0013_merge_20231221_1529.py  0014_alter_openidconnectconfig_groups_claim.py  0015_openidconnectconfig_oidc_token_use_basic_auth.py
mozilla_django_oidc_db/setup_configuration/: models.py  steps.py
mozilla_django_oidc_db/setupconfig/: boostrap.py
mozilla_django_oidc_db/templates/admin/: oidc_failure.html
mozilla_django_oidc_db/templatetags/: mozilla_django_oidc_db.py
mozilla_django_oidc_db/tests/: factories.py  utils.py
testapp/: apps.py  backends.py  models.py  plugins.py  settings.py  urls.py  views.py
testapp/migrations/: 0001_initial.py  0002_emptyconfig_oidc_keycloak_idp_hint_and_more.py  0003_remove_emptyconfig_oidc_exempt_urls.py  0004_anotheremptyconfig.py  0005_delete_anotheremptyconfig_delete_emptyconfig_and_more.py  0005_delete_emptyconfig_delete_wrongconfigmodel_and_more.py  0006_delete_anotheremptyconfig.py
tests/: conftest.py  custom_config.py  factories.py  test_admin_form.py  test_backend.py  test_callback_flow.py  test_checks.py  test_config.py  test_init_flow.py  test_init_flow_custom_config.py  test_integration_multiple_configs.py  test_integration_oidc_flow_variants.py  test_logout.py  test_middleware.py  test_models.py  test_plugins.py  test_settings.py  test_templatetags.py  test_utils.py  test_views.py  utils.py
tests/cassettes/test_admin_form/: test_derive_endpoints_google_oidc.yaml
tests/cassettes/test_init_flow/: test_default_config_flow.yaml
tests/cassettes/test_integration_multiple_configs/: test_use_config_class_from_state_over_config_class_from_session.yaml
tests/cassettes/test_integration_oidc_flow_variants/: test_client_id_secret_full_flow.yaml  test_credentials_in_basic_auth_header.yaml  test_return_jwt_from_userinfo_endpoint.yaml  test_session_refresh.yaml
tests/cassettes/test_logout/: test_logout_with_logout_endpoint_configured.yaml  test_logout_without_endpoint_configured.yaml
tests/setupconfig/: conftest.py  test_auth.py  test_steps.py
tests/setupconfig/cassettes/test_auth/: test_configure_use_discovery_endpoint.yaml
tests/setupconfig/cassettes/test_steps/: test_configure_use_discovery_endpoint.yaml
tests/setupconfig/files/: custom_options.yml  defaults.yml  discovery.yml  discovery_disabled.yml  empty.yml  full_setup.yml  invalid_client.yml  missing_identifier.yml  multiple_configs.yml  multiple_providers.yml  no_sync_groups.yml  partial_endpoints.yml  sync_groups.yml
