# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = mozilla-django-oidc-db
version = 0.14.1
description = A database-backed configuration for mozilla-django-oidc
long_description = file: README.rst
url = https://github.com/maykinmedia/mozilla-django-oidc-db
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = OIDC, django, database, authentication
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    Django >=3.2
    django-jsonform
    django-solo
    glom
    mozilla-django-oidc >=2.0.0
tests_require =
    psycopg2
    pytest
    pytest-django
    pytest-mock
    pytest-recording
    requests-mock
    factory-boy
    pyquery
    tox
    isort
    black

[options.extras_require]
tests =
    psycopg2
    pytest
    pytest-django
    pytest-mock
    pytest-recording
    requests-mock
    factory-boy
    pyquery
    tox
    isort
    black
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
; skip_glob =
known_django=django
known_first_party=mozilla_django_oidc_db
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
DJANGO_SETTINGS_MODULE = testapp.settings
testpaths = tests

[pep8]
max-line-length=88
exclude=env,.tox,doc

[flake8]
max-line-length=88
exclude=env,.tox,doc
