# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = mozilla-django-oidc-db
version = 0.15.0
description = A database-backed configuration for mozilla-django-oidc
long_description = file: README.rst
url = https://github.com/maykinmedia/mozilla-django-oidc-db
project_urls =
    Documentation = https://mozilla-django-oidc-db.readthedocs.io/en/latest/
    Changelog = https://github.com/maykinmedia/mozilla-django-oidc-db/blob/master/CHANGELOG.rst
    Bug Tracker = https://github.com/maykinmedia/mozilla-django-oidc-db/issues
    Source Code = https://github.com/maykinmedia/mozilla-django-oidc-db
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = OIDC, django, database, authentication
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    Django >=3.2
    django-jsonform
    django-solo
    glom
    mozilla-django-oidc >=3.0.0
tests_require =
    psycopg2
    pytest
    pytest-django
    pytest-mock
    pytest-recording
    requests-mock
    factory-boy
    pyquery
    tox
    isort
    black

[options.extras_require]
tests =
    psycopg2
    pytest
    pytest-django
    pytest-mock
    pytest-recording
    requests-mock
    factory-boy
    pyquery
    tox
    isort
    black
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
profile = black
combine_as_imports = true
known_django = django
known_first_party=mozilla_django_oidc_db
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
DJANGO_SETTINGS_MODULE = testapp.settings
testpaths = tests

[pep8]
max-line-length=88
exclude=env,.tox,doc

[flake8]
max-line-length=88
exclude=env,.tox,doc
